[package]
name = "facet-asn1"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "ASN.1 DER/BER serialization and deserialization for facet"
keywords = ["asn1", "der", "ber", "serialization", "facet"]
categories = ["encoding", "parsing"]
homepage = "https://facet.rs"

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]
default = ["std"]
std = ["facet-core/std", "facet-reflect/std"]
iddqd = ["facet/iddqd"]

# yoke support
yoke = ["facet/yoke", "facet-format-suite/yoke"]

[dependencies]
facet-core = { path = "../facet-core", version = "0.44.2", default-features = false, features = ["alloc"] }
facet-format = { path = "../facet-format", version = "0.44.2", default-features = false }
facet-reflect = { path = "../facet-reflect", version = "0.44.2", default-features = false, features = ["alloc"] }

[dev-dependencies]
facet = { path = "../facet", features = ["all-impls", "iddqd"] }
facet-testhelpers = { path = "../facet-testhelpers" }
facet-format-suite = { path = "../facet-format-suite", features = ["third-party", "net"] }
libtest-mimic = "0.8"

[[test]]
name = "format_suite"
harness = false

[lints]
workspace = true
