[package]
name = "facet-format-suite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Comprehensive test suite for facet format implementations - ensures correctness across serialization formats"
keywords = ["testing", "serialization", "facet", "suite", "validation"]
categories = ["development-tools::testing"]
homepage = "https://facet.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
tracing = { workspace = true }
arborium = { workspace = true, features = ["lang-rust", "lang-xml", "lang-yaml"] }
bytes = { workspace = true, optional = true }
bytestring = { workspace = true, optional = true }
camino = { workspace = true, optional = true }
chrono = { workspace = true, optional = true, features = ["clock"] }
compact_str = { workspace = true, optional = true }
facet = { path = "../facet", version = "0.44.2", features = [
  "doc",
  "all-impls",
] } # facet-format-suite is meant to be comprehensive
facet-pretty = { path = "../facet-pretty", version = "0.44.2" }
facet-value = { path = "../facet-value", version = "0.44.2", optional = true }
indoc = { workspace = true }
jiff = { workspace = true, optional = true }
ordered-float = { version = "5.0.0", optional = true, default-features = false }
rmp-serde = { version = "1", optional = true }
serde = { workspace = true, features = ["derive", "rc", "alloc"], optional = true }
smartstring = { workspace = true, optional = true }
smol_str = { workspace = true, optional = true }
time = { workspace = true, optional = true, features = ["formatting", "parsing"] }
tokio = { version = "1", features = ["rt"], optional = true }
ulid = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
rust_decimal = { workspace = true, optional = true }
iddqd = { workspace = true, optional = true }
yoke = { version = "0.8.1", optional = true }

[dev-dependencies]

[features]
# Async testing support
tokio = ["dep:tokio"]

# Enable third-party type tests
uuid = ["dep:uuid", "facet/uuid"]
ulid = ["dep:ulid", "facet/ulid"]
camino = ["dep:camino", "facet/camino"]
ordered-float = ["dep:ordered-float", "facet/ordered-float"]
time = ["dep:time", "facet/time"]
jiff02 = ["dep:jiff", "facet/jiff02"]
chrono = ["dep:chrono", "facet/chrono"]
bytes = ["dep:bytes", "facet/bytes"]
bytestring = ["dep:bytestring", "facet/bytestring"]
compact_str = ["dep:compact_str", "facet/compact_str"]
smartstring = ["dep:smartstring", "facet/smartstring"]
smol_str = ["dep:smol_str", "facet/smol_str"]
rust_decimal = ["dep:rust_decimal", "facet/rust_decimal"]
iddqd = ["dep:iddqd", "facet/iddqd"]
facet-value = ["dep:facet-value"]
# Standard library net types (SocketAddr, IpAddr, etc.)
net = ["facet/net"]
# All third-party types
third-party = [
  "uuid",
  "ulid",
  "camino",
  "ordered-float",
  "time",
  "jiff02",
  "chrono",
  "bytes",
  "bytestring",
  "compact_str",
  "smartstring",
  "smol_str",
  "rust_decimal",
  "iddqd",
  "facet-value",
]

# Binary format reference implementations
msgpack = ["dep:rmp-serde", "dep:serde"]
yoke = ["dep:yoke", "facet/yoke"]

[lints]
workspace = true
