[package]
name = "facet-format"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core Serializer/Deserializer traits for facet's next-generation format architecture with JIT compilation support"
keywords = ["serialization", "deserialization", "jit", "facet", "reflection"]
categories = ["encoding", "parsing"]
homepage = "https://facet.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
tracing = { version = "0.1", default-features = false, optional = true }
stacker = { version = "0.1", default-features = false, optional = true }
facet-core = { path = "../facet-core", version = "0.44.2" }
facet-dessert = { path = "../facet-dessert", version = "0.44.2" }
facet-path = { path = "../facet-path", version = "0.44.2", default-features = false }
facet-reflect = { path = "../facet-reflect", version = "0.44.2" }
facet-solver = { path = "../facet-solver", version = "0.44.2", default-features = false }

# JIT compilation (optional)
cranelift = { version = "0.128", optional = true }
cranelift-jit = { version = "0.128", optional = true }
cranelift-module = { version = "0.128", optional = true }
cranelift-native = { version = "0.128", optional = true }
parking_lot = { version = "0.12", optional = true }
museair = { version = "0.4", optional = true }
libc = { version = "0.2", optional = true }

# Pretty error rendering (optional)
ariadne = { version = "0.6", optional = true }

[dev-dependencies]

[features]
default = []
alloc = []
# Stack growth guards for deep recursive deserialization.
stacker = ["dep:stacker"]
# Enable logging via tracing
tracing = ["dep:tracing"]
# Network types (IpAddr, SocketAddr, etc.)
net = ["facet-core/net"]
# JIT-compiled deserialization using Cranelift - works with any FormatParser
jit = ["dep:cranelift", "dep:cranelift-jit", "dep:cranelift-module", "dep:cranelift-native", "dep:parking_lot", "dep:museair", "dep:libc"]
# Alias to unblock workspace-level `--features cranelift`
cranelift = ["jit"]
# compact_str support
compact_str = ["facet-core/compact_str"]
# Pretty error rendering with ariadne
ariadne = ["dep:ariadne"]

[lints]
workspace = true
