[package]
name = "facet-json"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "JSON serialization for facet using the new format architecture"
keywords = ["json", "serialization", "facet", "parsing"]
categories = ["encoding", "parsing"]
homepage = "https://facet.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet = { path = "../facet", version = "0.44.2", default-features = false }
itoa = { version = "1", optional = true }
memchr = "2"
zmij = { version = "1", optional = true }
facet-core = { path = "../facet-core", version = "0.44.2" }
facet-format = { path = "../facet-format", version = "0.44.2", default-features = false }
facet-reflect = { path = "../facet-reflect", version = "0.44.2" }

# Tracing (optional - compiles to nothing when disabled)
tracing = { workspace = true, optional = true }
lexical-parse-float = { version = "1.0.5", optional = true }
lexical-parse-integer = { version = "1.0.5", optional = true }

# Axum integration (optional)
axum-core = { version = "0.5", default-features = false, optional = true }
http = { workspace = true, optional = true }
http-body-util = { version = "0.1", default-features = false, optional = true }
mime = { version = "0.3", optional = true }

[dev-dependencies]
compact_str = { workspace = true }
facet-json-classics = { path = "../facet-json-classics" }
divan = { workspace = true }
facet = { path = "../facet", features = ["doc", "net", "compact_str", "smol_str", "iddqd", "tendril"] }
serde = { workspace = true }
tendril = "0.5.0"
facet-format = { path = "../facet-format", features = ["jit", "net", "tracing"] }
facet-reflect = { path = "../facet-reflect", features = ["tracing"] }
facet-testhelpers = { path = "../facet-testhelpers" }
serde_json = { workspace = true }
facet-format-suite = { path = "../facet-format-suite", features = ["third-party", "net", "tokio"] }
indoc = { workspace = true }
libtest-mimic = "0.8.1"
smol_str = { workspace = true }
tracing = { workspace = true }

[[test]]
name = "format_suite"
harness = false

[[bench]]
name = "canada"
harness = false

[[bench]]
name = "citm"
harness = false

[[bench]]
name = "twitter"
harness = false

[[bench]]
name = "typeplan_reuse"
harness = false

[[example]]
name = "profile_jit_vec"
required-features = ["jit"]

[features]
default = []
fast = ["lexical-parse", "dep:itoa", "dep:zmij"]
lexical-parse = ["dep:lexical-parse-float", "dep:lexical-parse-integer"]
std = []
jit = ["facet-format/jit"]
ci = ["stacker"] # CI feature enables stack growth for deep deserialization tests
net = ["facet-format/net", "facet-core/net"]
tracing = ["dep:tracing", "facet-format/tracing", "facet-reflect/tracing"]
stacker = ["facet-format/stacker"]

# Axum HTTP integration
axum = ["std", "dep:axum-core", "dep:http", "dep:http-body-util", "dep:mime"]

# compact_str support
compact_str = ["facet/compact_str", "facet-format/compact_str"]

# iddqd support
iddqd = ["facet/iddqd"]

# yoke support
yoke = ["facet/yoke", "facet-format-suite/yoke"]

# smallvec support
smallvec = ["facet/smallvec"]

[lints]
workspace = true
