[package]
name = "facet-macro-parse"
version = "0.44.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "Parser for facet derive macros - transforms TokenStreams into structured type representations"
keywords = ["macro", "parser", "facet", "derive", "proc-macro"]
categories = ["development-tools", "parser-implementations"]
homepage = "https://facet.rs"

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet-macro-types = { version = "0.44.2", path = "../facet-macro-types" }
proc-macro2 = "1"
quote = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
