[package]
name = "facet-macro-types"
version = "0.44.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Unsynn grammar and type definitions for facet macro ecosystem"
homepage = "https://facet.rs"
keywords = ["reflection", "macros", "derive"]
categories = ["development-tools"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
proc-macro2 = "1"
quote = { workspace = true }
unsynn = { workspace = true }

[lints]
workspace = true
