[package]
name = "facet-macros-impl"
version = "0.44.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Implementation of facet derive macros (parsing and code generation)"
homepage = "https://facet.rs"
keywords = [
    "reflection",
    "introspection",
    "serialization",
    "deserialization",
    "derive",
]
categories = ["development-tools", "encoding"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]
default = ["helpful-derive"]
slow-tests = [] # Enable slow tests (compile tests)
ci = ["slow-tests"] # CI feature
function = []
# Include doc comments in generated Shape/Field/Variant definitions
doc = []
# Enable typo suggestions for unknown attributes/fields (uses strsim)
helpful-derive = ["dep:strsim"]

[dependencies]
facet-macro-parse = { version = "0.44.2", path = "../facet-macro-parse" }
facet-macro-types = { version = "0.44.2", path = "../facet-macro-types" }
proc-macro2 = "1.0.95"
quote = { workspace = true }
strsim = { workspace = true, optional = true }
unsynn = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
