[package]
name = "facet-macros"
version = "0.44.2"
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Derive macro for the Facet trait - proc macro powered by unsynn for compile-time type introspection"
keywords = [
    "reflection",
    "introspection",
    "derive",
    "macro",
    "facet",
]
categories = ["development-tools", "rust-patterns"]
homepage = "https://facet.rs"

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[lib]
proc-macro = true

[features]
default = ["helpful-derive"]
function = ["facet-macros-impl/function"]
# Include doc comments in generated Shape/Field/Variant definitions
doc = ["facet-macros-impl/doc"]
# Enable typo suggestions for unknown attributes/fields (uses strsim)
helpful-derive = ["facet-macros-impl/helpful-derive"]

[dependencies]
facet-macros-impl = { version = "0.44.2", path = "../facet-macros-impl", default-features = false }

# cf. https://hachyderm.io/@epage/114141126315983016
[target.'cfg(any())'.dependencies]

[lints]
workspace = true
