[package]
name = "facet-path"
version = "0.44.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Path tracking for navigating Facet type structures"
keywords = ["facet", "path", "reflection", "error-reporting"]
categories = ["development-tools", "rust-patterns"]
homepage = "https://facet.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]
default = ["std"]
std = ["alloc", "facet-core/std"]
alloc = ["facet-core/alloc"]

[dependencies]
facet-core = { path = "../facet-core", version = "0.44.2", default-features = false }

[dev-dependencies]
facet = { path = "../facet" }
facet-testhelpers = { path = "../facet-testhelpers" }
insta = { workspace = true }

[lints]
workspace = true
