[package]
name = "facet-reflect"
version = "0.44.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Build and manipulate values of arbitrary Facet types at runtime while respecting invariants - safe runtime reflection"
keywords = ["reflection", "introspection", "facet", "runtime", "manipulation"]
categories = ["development-tools", "rust-patterns"]
homepage = "https://facet.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]
default = ["std", "regex"]
std = ["alloc", "facet-core/std", "facet-path/std"] # Enable the standard library features
alloc = [
    "facet-core/alloc",
    "facet-path/alloc",
] # Enable the allocation features
tracing = [
    "dep:tracing",
] # Enable logging of reflection operations (mostly for internal development)
regex = ["dep:regex"] # Enable regex-based validators (email, url, regex pattern matching)
slow-tests = [] # Enable slow tests (compile tests)
ci = ["slow-tests"] # CI feature
fuzz-tests = [] # Test-only feature to keep fuzz cfgs compiling
camino = [
    "alloc",
    "dep:camino",
    "facet-core/camino",
] # Enable Facet implementation for camino path types
uuid = [
    "alloc",
    "dep:uuid",
    "facet-core/uuid",
] # Enable Facet implementation for UUID types
ulid = [
    "alloc",
    "dep:ulid",
    "facet-core/ulid",
] # Enable Facet implementation for ULID types
time = ["facet-core/time"] # Enable Facet implementation for time types
jiff02 = ["facet-core/jiff02"] # Enable Facet implementation for jiff 0.2 types
fn-ptr = [
    "facet-core/fn-ptr",
] # Enable Facet implementation for function pointers

[dependencies]
camino = { workspace = true, optional = true }
facet-core = { path = "../facet-core", version = "0.44.2", default-features = false }
facet-path = { version = "0.44.2", path = "../facet-path", default-features = false }
hashbrown = "0.16"
smallvec = "2.0.0-alpha.12"
regex = { version = "1", default-features = false, features = ["std"], optional = true }
tracing = { workspace = true, optional = true }
ulid = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

[dev-dependencies]
eyre = { workspace = true }
facet = { path = "../facet", features = ["net", "nonzero"] }
facet-testhelpers = { path = "../facet-testhelpers" }
facet-value = { path = "../facet-value" }
insta = { workspace = true }
proptest = "1.9"
tempfile = { workspace = true }

[lints]
workspace = true
