[package]
name = "facet-shapelike"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Serializable owned versions of Facet shape types - enables persisting and transmitting type metadata"
keywords = ["facet", "reflection", "schema", "serialization", "metadata"]
categories = ["encoding", "data-structures"]
homepage = "https://facet.rs"

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]

[dependencies]
facet = { path = "../facet", version = "0.44.2", features = ["all-impls", "doc"] }
facet-core = { path = "../facet-core", version = "0.44.2", features = ["alloc"] }
facet-postcard = { path = "../facet-postcard", version = "0.44.2" }
facet-reflect = { path = "../facet-reflect", version = "0.44.2", default-features = false }

[dev-dependencies]

[lints]
workspace = true
