[package]
name = "facet-showcase"
version = "0.43.0"
edition.workspace = true
rust-version.workspace = true
description = "Unified showcase infrastructure for facet format crates"
homepage = "https://facet.rs"
license.workspace = true
repository.workspace = true
keywords = ["facet", "showcase", "demo"]
categories = ["development-tools"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
arborium = { workspace = true, features = ["lang-rust", "lang-xml", "lang-yaml"] }
facet = { path = "../facet", version = "0.44.2", features = ["all-impls", "doc"] }
facet-pretty = { path = "../facet-pretty", version = "0.44.2" }

# Terminal colors
owo-colors = "4"

[features]
default = []

[lints]
workspace = true
