[package]
name = "facet-testhelpers-macros"
version = "0.44.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["testing", "helpers", "utilities"]
categories = ["development-tools::testing", "development-tools"]
description = "Proc macro for facet-testhelpers"
homepage = "https://facet.rs"

[lib]
proc-macro = true

[features]

[dependencies]
quote = { workspace = true }
unsynn = { workspace = true }

[lints]
workspace = true
