[package]
name = "facet-testhelpers"
version = "0.44.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["testing", "helpers", "utilities"]
categories = ["development-tools::testing", "development-tools"]
homepage = "https://facet.rs"
description = "A collection of testing helpers and utilities for facet"

[features]

[dependencies]
facet-testhelpers-macros = { version = "0.44.2", path = "../facet-testhelpers-macros" }
color-backtrace = { version = "0.7.2", features = ["use-btparse-crate"] }
termcolor = "1.4"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["ansi"] }

[lints]
workspace = true
